--- a/rev_environment.yml
+++ b/rev_environment.yml
@@ -132,4 +132,4 @@ dependencies:
     - yarl==1.7.2
     - zipp==3.8.0
     - zope-interface==5.4.0
-prefix: /u/gz5hp/.conda/envs/ai2env
+prefix: /u/.conda/envs/revenv
